--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,13 @@
     "apollo-test-utils": "^0.1.1",
     "false": "0.0.4",
     "graphql-tools": "^0.10.0",
-    "react": "16.0.0-alpha.6",
     "react-apollo": "^1.1.2",
-    "react-native": "0.44.2",
-    "react-navigation": "^1.0.0-beta.11"
+    "react": "16.0.0-alpha.12",
+    "react-native": "0.47.1",
+    "react-native-elements": "^0.15.0",
+    "react-native-vector-icons": "^4.3.0",
+    "react-navigation": "^1.0.0-beta.11",
+    "tcomb-form-native": "^0.6.9"
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
