--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -7,7 +7,8 @@
     "linebreak-style": ["off"],
     "no-undef": ["error"],
     "react/sort-comp": ["off"],
-    "react/prefer-stateless-function": ["off"]
+    "react/prefer-stateless-function": ["off"],
+    "react/prop-types": 0
   },
   "globals": {
     "it": 0,
