--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "apollo-client": "^1.1.1",
     "apollo-test-utils": "^0.1.1",
     "false": "0.0.4",
+    "graphql-tag": "^2.4.2",
     "graphql-tools": "^0.10.0",
     "react": "16.0.0-alpha.12",
     "react-apollo": "^1.1.2",
